recursion.logo.spiral.Spiral.scala.error
Erreur de compilation :
Spiral:8: error: not found: value lenght
    spiral(steps-1, angle, lenght+increment, increment);
                           ^Spiral:12: error: not found: value spitral
spitral(5, 90, 0, 3); 
^