recursion.logo.spiral.Spiral.scala.code
def spiral(steps:Int, angle:Int, length:Int, increment:Int)    {
  if (steps == 0){
    
  }
  else {
    avance(length);
  	gauche(angle);
  	spiral(steps-1, angle, lenght+increment, increment);
	}
}

spitral(5, 90, 0, 3);